# indexer/swagger.yaml
@@ -31,11 +31,62 @@ paths:
           required: true
           type: string
           pattern: "0x[0-9a-f-A-F]{40}"
+  /collections/file-bunnies/whitelist/{rarity}/sign/{address}:
+    get:
+      description: Получение подписи для вайтлиста
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Подпись
+          schema:
+            $ref: "#/definitions/WhitelistSignatureResponse"
+        "400":
+          description: Ошибка, адрес не в вайтлисте
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      parameters:
+        - name: rarity
+          description: Название вайтлиста
+          in: path
+          required: true
+          type: string
+        - name: address
+          in: path
+          required: true
+          type: string
+          pattern: "0x[0-9a-f-A-F]{40}"
+  /collections/file-bunnies/whitelist/{address}:
+    get:
+      tags:
+        - collections
+      description: Вернет массив из названий вайтлистов, в которых находится адрес. (e.g. ["common", "uncommon"])
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Названия вайтлистов
+          schema:
+            $ref: "#/definitions/WhitelistResponse"
+        default:
+          description: Ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      parameters:
+        - name: address
+          in: path
+          required: true
+          type: string
+          pattern: "0x[0-9a-f-A-F]{40}"
   /collections/full/{address}:
     get:
       tags:
         - collections
-      description: Получение коллекции со всем ее токенами по адресу
+      description: Получение коллекции со всеми ее токенами по адресу
       produces:
         - application/json
       responses:
@@ -71,7 +122,38 @@ paths:
     get:
       tags:
         - collections
-      description: Получение публичной коллекции со всем ее токенами
+      description: Получение публичной коллекции со всеми ее токенами
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Коллекция
+          schema:
+            $ref: "#/definitions/CollectionData"
+        default:
+          description: Ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      parameters:
+        - name: lastTokenId
+          in: query
+          description: Id последнего токена на прошлой странице. Если пустая строка, то вернет первую страницу
+          type: string
+          default: ""
+          pattern: "^[0-9]*$"
+        - name: limit
+          in: query
+          description: Максимальное число токенов, которое вернется на этой странице.
+          type: integer
+          format: int
+          default: 10000
+          minimum: 0
+          maximum: 10000
+  /collections/full/file-binnies:
+    get:
+      tags:
+        - collections
+      description: Получение коллекции File Bunnies со всеми ее токенами
       produces:
         - application/json
       responses:
@@ -634,6 +716,10 @@ paths:
         required: true
         type: string
         pattern: "0x[0-9a-f-A-F]{40}"
+      - name: suffix
+        description: Дополнительная информация, о коллекции. Пример - при запросе tokenId у `common` вайтлиста в суффиксе нужно указать `common`
+        in: query
+        type: string
 definitions:
   ErrorResponse:
     type: object
@@ -768,6 +854,20 @@ definitions:
         $ref: "#/definitions/Token"
       transfer:
         $ref: "#/definitions/Transfer"
+  WhitelistSignatureResponse:
+    type: object
+    properties:
+      signature:
+        type: string
+        description: Подпись
+  WhitelistResponse:
+    type: object
+    properties:
+      whitelists:
+        type: array
+        description: Массив названий вайтлистов, в которых присутствует адрес
+        items:
+          type: string
   CollectionData:
     type: object
     description: Коллекция со всеми токенами
